try debian12 linux-arm64 no libc

--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -179,7 +179,7 @@ jobs:
             os: linux
             arch: arm64
             name: debian-12-arm64
-            libc: glibc
+            #libc: glibc
 
           # Debian 10-12 self-hosted builds 32-bit ARM
           # armv7
