--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -165,21 +165,21 @@ jobs:
 
           # Debian 10-12 self-hosted builds arm64
           # arm64
-          #- runner_label: deb10
-          #  os: linux
-          #  arch: arm64
-          #  name: debian-10-arm64
-          #  libc: glibc
+          - runner_label: deb10
+            os: linux
+            arch: arm64
+            name: debian-10-arm64
+            libc: glibc
           #- runner_label: deb11
           #  os: linux
           #  arch: arm64
           #  name: debian-11-arm64
           #  libc: glibc
-          - runner_label: deb12
-            os: linux
-            arch: arm64
-            name: debian-12-arm64
-            #libc: glibc
+          #- runner_label: deb12
+          #  os: linux
+          #  arch: arm64
+          #  name: debian-12-arm64
+          #  #libc: glibc
 
           # Debian 10-12 self-hosted builds 32-bit ARM
           # armv7
