--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -358,6 +358,7 @@ jobs:
       #- name: "Set up Win386 cross-compiler"
       #  if: matrix.goarch == '386' && matrix.os == 'windows'
       #  run: |
+      #    cd rapidyenc && ./build_rapidyenc_win_386.sh
       #    echo "CC=x86_64-w64-mingw32-gcc" >> $GITHUB_ENV
       #    echo "CXX=x86_64-w64-mingw32-g++" >> $GITHUB_ENV
       #    echo "CGO_ENABLED=1" >> $GITHUB_ENV
