--- a/.github/workflows/build_and_publish_test.yml
+++ b/.github/workflows/build_and_publish_test.yml
@@ -295,6 +295,7 @@ jobs:
           echo "deleting workspace"
           rm -rf dist build ${{ github.workspace }}/
           mkdir -vp ${{ github.workspace }}
+          mkdir -p builds/${{ matrix.name }}/usr/bin
 
       - name: "Checkout code"
         uses: actions/checkout@v4
