--- a/.github/workflows/goreleaser_test.yml
+++ b/.github/workflows/goreleaser_test.yml
@@ -55,14 +55,17 @@ jobs:
           args: release --clean --snapshot
 
       - name: "Set GaRuS Variables"
-        run: echo "GITHUB_SHA7=${GITHUB_SHA::7}" >> $GITHUB_ENV
+        run: |
+          SAFE_VERSION="$(echo "${GITHUB_REF_NAME}" | sed 's|/|-|g')"
+          echo "GITHUB_SHA7=${GITHUB_SHA::7}" >> $GITHUB_ENV
+          echo "VERSION=${SAFE_VERSION}" >> $GITHUB_ENV
 
       - name: "Upload binary to private GaRuS (Git-actions-Runner-upload-Server)"
         run: .goreleaser/post_upload_GaRuS.sh
         env:
           BUILD_TEST_UPLOAD_TOKEN: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
-          GITHUB_REF_NAME: ${{ github.ref_name }}
+          GITHUB_REF_NAME: ${{ env.VERSION }}
           GITHUB_SHA7: ${{ env.GITHUB_SHA7 }}
           COMPILER: "GOR"
 
