--- a/.github/workflows/build_and_publish_main-PULL_test.yml
+++ b/.github/workflows/build_and_publish_main-PULL_test.yml
@@ -5,9 +5,9 @@ on:
     types: [published]
   workflow_dispatch:
   repository_dispatch:
-  #pull_request:
-  #  branches:
-  #    - main
+  pull_request:
+    branches:
+      - main
 
 permissions:
   contents: write
