--- a/.github/workflows/build_and_publish_test.yml
+++ b/.github/workflows/build_and_publish_test.yml
@@ -3,7 +3,7 @@ name: "TEST Self-Hosted Runners"
 on:
   push:
     branches:
-      - 'testing'
+      - 'rapidyenc'
     tags:
       - "test*"
   release:
