set on push tags test_rapidyenc

--- a/.github/workflows/build_and_publish_test.yml
+++ b/.github/workflows/build_and_publish_test.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - 'rapidyenc'
     tags:
-      - "test*"
+      - "test_rapidyenc"
   release:
     types: [published]
   workflow_dispatch:
