--- a/.github/workflows/build_and_publish_test.yml
+++ b/.github/workflows/build_and_publish_test.yml
@@ -27,6 +27,7 @@ jobs:
       - ${{ matrix.runner_label }}
     strategy:
       fail-fast: false
+      max-parallel: 8
       matrix:
         include:
           # Alpine Linux cross-builds (musl)
