--- a/.github/workflows/build_and_publish_test.yml
+++ b/.github/workflows/build_and_publish_test.yml
@@ -10,10 +10,10 @@ on:
     types: [published]
   workflow_dispatch:
   repository_dispatch:
-  #pull_request:
-  #  branches:
-  #    - main
-  #    - "test*"
+  pull_request:
+    branches:
+      - main
+      #- "test*"
 
 permissions:
   contents: write
